# vexjoy-agent

./: .debug-knowledge-base.md  .env.example  .gitignore  AGENT_TEMPLATE_V2.md  CLAUDE-soul-template.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  dynamic-workflows-vs-vexjoy-diff.md  install.sh  pyproject.toml  requirements.txt  research-superpowers-comparison.md  vexjoy-token-efficiency-backlog.md
.audit/unified-deck-prototype/: run-unified.py
.claude/: settings.json
.github/: pull_request_template.md
.github/workflows/: claude.yml  pr-ai-review.yml  test.yml
.local.example/: README.md  config.yaml  github-actions-check.yaml  inject.yaml
.local.example/agents/: kubernetes-helm-engineer.md
adr/: 007-sast-tool-integration.md
agents/: INDEX.json  README.md  README.txt  agent-creator-engineer.md  ansible-automation-engineer.md  base-instructions.md  combat-effects-upgrade.md  data-engineer.md  database-engineer.md  github-profile-rules-engineer.md  golang-general-engineer-compact.md  golang-general-engineer.md  hook-development-engineer.md  kotlin-general-engineer.md  kubernetes-helm-engineer.md  mcp-local-docs-engineer.md  nextjs-ecommerce-engineer.md  nodejs-api-engineer.md  opensearch-elasticsearch-engineer.md  opensearch-siem-engineer.md  performance-optimization-engineer.md  perses-core-engineer.md  perses-dashboard-engineer.md  perses-engineer.md  perses-operator-engineer.md  perses-plugin-engineer.md  php-general-engineer.md  pipeline-orchestrator-engineer.md  pixijs-combat-renderer.md  project-coordinator-engineer.md  prometheus-grafana-engineer.md  python-general-engineer.md  python-openstack-engineer.md  rabbitmq-messaging-engineer.md  react-native-engineer.md  react-portfolio-engineer.md  research-coordinator-engineer.md  research-subagent-executor.md  retro-context-walker.md  retro-meta-walker.md  (+47 more)
agents/references/: go-anti-patterns.md  go-concurrency.md  go-errors.md  go-modern-features.md  go-testing.md  python-anti-patterns.md  python-errors.md  python-modern-features.md
artifacts/: bulk-fix-do-framing-remaining.json  bulk-fix-do-framing-report.json  bulk-fix-instruction-joy-remaining.json  bulk-fix-instruction-joy-report.json  joy-check-sweep-backlog.json
benchmark/tone-ab-test/: results.md
commands/: create-pipeline.md  do.md  generate-claudemd.md  github-notifications.md  github-profile-rules.md  install.md  perses-onboard.md  pr-review.md  python-doc-generator.md  retro.md  system-upgrade.md
docs/: CITATIONS.md  PHILOSOPHY.md  QUICKSTART.md  REFERENCE.md  VOICE-SYSTEM.md  agent-evidence.md  compaction-reference.md  deprecation-template.md  docs-audit.md  for-ai-wizards.md  for-claude-code.md  for-developers.md  for-knowledge-workers.md  for-linkedin.md  injected-context-contracts.md  outcome-routing-shadow-loop.md  positive-instruction-migration.md  route-loop-validation.md  router-ab-runbook.md  skills.md  start-here.md  what-didnt-work.md  workflow-terminology-migration.md
evals/: CONTRIBUTING.md  EVALS.md  README.md  harness.py  task_schema.yaml
evals/dense-complete-writing/: README.md  clause-race-cases.md  scoring-rubric.md
evals/integrations/: __init__.py  agent_evaluation.py  testing_skill.py
evals/new-skills-ab-test/: README.md  explanation-traces-cases.md  multi-persona-critique-cases.md  progressive-depth-cases.md  scoring-rubric.md
evals/rubrics/: agent_quality.md  agent_structural.md  design_quality.md  plan_quality.md  retro_quality.md
evals/tests/: __init__.py  conftest.py  test_harness.py
harbor-adapter/: .gitignore  Dockerfile  README.md  job.yaml  run_dry_run.sh
harbor-adapter/harbor_adapter/: __init__.py  claude_code_do_agent.py
harbor-adapter/scripts/: build_report.py
hooks/: QUICKSTART.md  README.md  __init__.py  adr-context-injector.py  adr-enforcement.py  afk-mode.py  agent-grade-on-change.py  anti-rationalization-injector.py  auto-graduation-scanner.py  auto-plan-detector.py  block-attribution.py  block-gitignore-bypass.py  capability-catalog-injector.py  ci-merge-gate.py  codex-auto-review.py  codex-hook-adapter.py  completion-evidence-check.py  confidence-decay.py  creation-protocol-enforcer.py  creation-request-enforcer-userprompt.py  cross-repo-agents.py  error-learner.py  fish-shell-detector.py  hook-version-parity-check.py  instruction-compliance.py  instruction-reminder.py  kairos-briefing-injector.py  knowledge-graduation-proposer.py  mcp-health-check.py  operator-context-detector.py  perses-lint-gate.py  perses-mcp-injector.py  pipeline-context-detector.py  pipeline-phase-gate.py  post-compact-handler.py  post-tool-lint-hint.py  posttool-auto-test.py  posttool-bash-injection-scan.py  posttool-docs-drift-alert.py  posttool-lint-hint.py  (+69 more)
hooks/afk-mode/: README.md
perses-plugin-example/: README.md  package.json  rsbuild.config.ts  tsconfig.json
pipelines/: INDEX.json  README.md
retro/: L1.md
scripts/: README.md  add-companion-skills.py  adr-compliance.py  adr-decision-coverage.py  adr-query.py  adr-status.py  agent-scheduler.py  artifact-utils.py  audit-reference-depth.py  audit-skill-content.py  audit-tool-restrictions.py  audit-trigger-ambiguity.py  auto-dream-cron.sh  bake-bvh-to-glb.py  benchmark-hooks.py  bluesky-reader.py  build-dispatch.py  bulk_fix_do_framing.py  bulk_fix_instruction_joy.py  category-registry.json  check-index-colocation.py  check-routing-drift.py  check-scope-overlap.py  check-skill-verdicts.py  check-whitespace.py  classify-hooks.py  classify-repo.py  code-outline.py  codex-hooks-allowlist.txt  component-usage-report.py  configure-profile.py  conformance-harness.mjs  count-components.sh  crontab-manager.py  design-scale-check.py  detect-decomposition-targets.py  detect-skill-changes.py  detect-unpaired-antipatterns.py  detect-workflow-capability.py  diff-to-functions.py  (+138 more)
services/: README.md
skills/: INDEX.json  README.md  joy-check  voice-test  voice-vexjoy
tests/: test_learning_loop_fixes.py  test_per_item_install.sh  test_plan_gate_hook.py  test_pytest_config.py  test_reasonix_install.sh  test_review_false_positive_capture.py
(+3135 files in other folders)
